--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="contact.html" class="button">Hire Me</a>
     </div>
     <div class="hero-img">
-      <img src="/Users/akshatanayak/Documents/codsoft_portfolio/images/WhatsApp Image 2025-07-06 at 15.29.10.jpeg" alt="Your photo">
+      <img src="WhatsApp Image 2025-07-06 at 15.29.10.jpeg" alt="Your photo">
     </div>
   </section>
 
