--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <div class="logo">Akshata 💖</div>
+    <div class="logo">Akshata's Portfolio 💖</div>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
