--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <div class="logo">Akshata 💖</div>
+    <div class="logo">Akshata's Portfolio 💖</div>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -25,14 +25,14 @@
 
     <div class="project">
       <h3>🧠 Transformer-Based Sentiment Analysis (Minor Project)</h3>
-      <img src="/Users/akshatanayak/Documents/codsoft_portfolio/images/Screenshot 2025-07-06 at 4.07.11 PM.png" alt="Transformer Project Preview" class="project-img"/>
+      <img src="" alt="Transformer Project Preview" class="project-img"/>
       <p>Conducted a large-scale sentiment analysis using BERT and DistilBERT on 205K+ e-commerce reviews. Achieved over <strong>98% accuracy</strong> with minimal performance fluctuation by testing robustness across data splits and random seed initialization.</p>
       <p><strong>Tools:</strong> Python, HuggingFace, NLP, Google Colab</p>
     </div>
 
     <div class="project">
       <h3>📍 SalesTrail – Real-Time Salesperson Tracker (Research Project)</h3>
-      <img src="/Users/akshatanayak/Documents/codsoft_portfolio/images/Screenshot 2025-07-06 at 4.05.51 PM.png" alt="SalesTrail App Mockup" class="project-img"/>
+      <img src="Screenshot 2025-07-06 at 4.05.51 PM.png" alt="SalesTrail App Mockup" class="project-img"/>
       <p>Researched current salesperson tracking tools and evaluated their features, usability, and performance. Created a detailed presentation highlighting the app's benefits for managers and sales teams, focusing on real-time visibility and accountability.</p>
       <p><strong>Tools:</strong> Market Research, Canva, Presentation Design</p>
     </div>
