--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 
     <div class="project">
       <h3>🧠 Transformer-Based Sentiment Analysis (Minor Project)</h3>
-      <img src="" alt="Transformer Project Preview" class="project-img"/>
+      <img src="Screenshot 2025-07-06 at 4.07.11 PM.png" alt="Transformer Project Preview" class="project-img"/>
       <p>Conducted a large-scale sentiment analysis using BERT and DistilBERT on 205K+ e-commerce reviews. Achieved over <strong>98% accuracy</strong> with minimal performance fluctuation by testing robustness across data splits and random seed initialization.</p>
       <p><strong>Tools:</strong> Python, HuggingFace, NLP, Google Colab</p>
     </div>
