--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <div class="logo">Akshata 💖</div>
+    <div class="logo">Akshata's Portfolio 💖</div>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -24,7 +24,7 @@
     <h2>My Resume</h2>
     <p>You can view or download my resume using the button below 💼</p>
 
-    <a href="/Users/akshatanayak/Documents/codsoft_portfolio/Resume_coding.pdf" class="button" download>Download Resume</a>
+    <a href="Resume_coding.pdf" class="button" download>Download Resume</a>
 
     <p><small></small></p>
 
